Fixed font weight on command pallete items to be the font weight of the rest of the interface. This makes it easier to differentiate between the section headers and the command pallete items. Changed the letter spacing of the section headers in the command pallete and the running sessions tab to be closer together. This increases readability and I felt like they were a little too far spaced out.

--- a/src/commandpalette/index.css
+++ b/src/commandpalette/index.css
@@ -102,7 +102,7 @@
   cursor: pointer;
   text-transform: uppercase;
   border-bottom: solid var(--jp-border-width) var(--jp-border-color2);
-  letter-spacing: 1.2px;
+  letter-spacing: .8px;
 }
 
 
@@ -128,7 +128,7 @@
   padding: 4px 12px;
   color: var(--jp-ui-font-color1);
   font-size: var(--jp-ui-font-size1);
-  font-weight: 500;
+  font-weight: 400;
 }
 
 
